--- a/lose weight.html
+++ b/lose weight.html
@@ -109,7 +109,7 @@
 Калорийность каждого продукта обычно написана на упаковке. Так же, калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность.
 
 
-Если Вы будете выполнятять рекомендацию описанную в 3 пункте - то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат вы увидите раньше и он Вам понравится больше.<br>
+Если Вы будете выполнятять рекомендацию описанную в 3 пункте - то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат Вы увидите раньше и он Вам понравится больше.<br>
                                
                             
                                 <li>4. Двигайтесь! Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощениями.</li>
