--- a/lose weight.html
+++ b/lose weight.html
@@ -84,26 +84,40 @@
                     </p>
                     <p>Похудение - это комплекс мер по изменению образа жизни. <br> Если Вы верите в существование "волшебного средства", приняв которое можно быстро похудеть - Вы заблуждаетесь и собираетесь пойти по ложному пути. <br>
                         <ul>                                                      
-                                <li>1. В правильном питании стоит учитывать "Режим питания" и "Рацион питания".
+                            <li>1. <h3>Режим питания</h3>
+                                    В правильном питании стоит учитывать "Режим питания" и "Рацион питания".
                                     <ol> -На мой взгляд режим питания важнее.</ol>
                                     <ol> -Если в течении дня Вы недоедаете - то съедите суточную норму вечером или ночью!</ol>
                                     <ol> -Необходимо кушать 5 раз в день с промежутками 3 часа между приемами пищи.</ol>
                                     <ol> -Тело начинает запасать калории в случае нерегулярного питания!</ol>
                                 </li>
                             
-                                <li>2. 95% подкожного жира появляется от углеводов, а не от жиров. Углеводы бывают быстро усваиваемые и медленно усваиваемые. Необходимо исключить быстроусваиваемые:
+                                <li>2. <h3>Рацион питания</h3>
+                                    95% подкожного жира появляется от углеводов, а не от жиров. Углеводы бывают быстро усваиваемые и медленно усваиваемые. Необходимо исключить быстроусваиваемые:
                                     <ol>-сахар</ol>
                                     <ol>-мед</ol>
                                     <ol>-сладости</ol>
                                     <ol>-хлеб</ol>
                                     <ol>-быстроусваиваемые сорта риса</ol>
-                                    <ol>-картофель</ol>
                                     <ol>-виноград, изюм</ol>
                                     <ol>-цытрусовые (кроме грейпфрута - он наоборот сопутствует жиросжиганию)</ol>
+                                    <ol>-буряк, морковь, картофель</ol>
                                     Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи капните на сковороду несколько капель масла на которм обычно готовите и разотрите, либо используйте пуливер чтоб снизить количество масла.
                                 </li>
+                                        <h5>Чо же тогда кушать?</h5>
+                                <li>
+                                    <ol>рыба, морепродукты</ol>
+                                    <ol>мясо не жирное, птица (жир удаляйте)</ol>
+                                    <ol>яйца</ol>
+                                    <ol>молокопродукты не жирные</ol>
+                                    <ol>овощи - капуста, огурцы, зелень, сельдерей (кроме перечисленных в не желательных)</ol>
+                                    <ol>грейпфрут</ol>
+                                    <ol>в качестве жиров употребляйте рыбий жир и льняное масло</ol>
+                                    <ol>пейте много воды, газированной или нет - не важно</ol>                                    
+                                </li>
                             
-                                <li>3. <ol>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</ol>
+                                <li>3. <h3>Калорийность</h3>
+                                    <ol>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</ol>
 <ol>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел,  поднимаясь выше Вы не похудеете.</ol>
 <ol>ромежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.</ol>
 Калорийность каждого продукта обычно написана на упаковке. Так же, калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность.
