--- a/lose weight.html
+++ b/lose weight.html
@@ -127,7 +127,8 @@
 Если Вы будете выполнятять рекомендацию описанную в 3 пункте - то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат Вы увидите раньше и он Вам понравится больше.<br>
                                
                             
-                                <li>4. Двигайтесь! Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощениями.</li>
+                                <li>4. <h3>Двигайтесь!</h3> 
+                                    Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощениями.</li>
 
                         </ul>
                     </p>
