--- a/lose weight.html
+++ b/lose weight.html
@@ -128,7 +128,7 @@
                                
                             
                                 <li>4. <h3>Двигайтесь!</h3> 
-                                    Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощениями.</li>
+                                    Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощением.</li>
 
                         </ul>
                     </p>
