--- a/lose weight.html
+++ b/lose weight.html
@@ -103,8 +103,8 @@
                                     <ol>-цытрусовые (кроме грейпфрута - он наоборот сопутствует жиросжиганию)</ol>
                                     <ol>-буряк, морковь, картофель</ol>
                                     <ol>-алкоголь</ol>
-                                    <ol>сливочное, подсолнечное масла</ol>
-                                    <ol>майонез, соусы, сметана</ol>
+                                    <ol>-сливочное, подсолнечное масла</ol>
+                                    <ol>-майонез, соусы, сметана</ol>
                                     Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи капните на сковороду несколько капель масла на которм обычно готовите и разотрите, либо используйте пуливер чтоб снизить количество масла.
                                 </li>
                             <br>
