--- a/about me.html
+++ b/about me.html
@@ -84,6 +84,12 @@
                                 мускулатура кора позволила избежать использование поясничного корсета и для ее поддержания один из врачей порекомендовал силовые тренировки с отягощением. Я изучил все противопоказания и начал заниматься с целью реабилитации. Силовые тренировки помогли очень быстро восстановиться и впоследствии стали моим новым увлечением.
                             Я увлекся бодибилдингом, построил себе такое телосложение, какое хотел, стал призером Киева 2014 года и научился удерживать форму круглогодично.</p>
                             <br>
+                            
+                            <div class="zal">
+                                <img class="photo-zal1" src="img/diplom1.jpg" alt="персональный тренер Киев 0638587378">
+                                <img class="photo-zal2" src="img/diplom2.jpg" alt="персональный тренер Киев 0638587378">
+                            </div>
+
                             <p> Начал работать личным тренером в 2005м году, сразу после получения диплома НТУУ КПИ «специалист по физической реабилитации». В моей тренерской карьере были перерывы связанные с переездами, травмами и даже профессиональным выгоранием,
                                 но я остаюсь и останусь в этой профессии потому что люблю процесс тренировок, общение с людьми разных профессий и жизненных взглядов, мне нравится что я выгляжу моложе своих лет, чувствую себя здоровым и подвижным, знаю
                                 как сберечь молодость и здоровье на более длительный период жизни. За время работы фитнес тренером я убедился, что спорт благотворно воздействует на эмоциональное состояние, состояние кожи, нормализует давление и уровень
