--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                     <p>Все органы и ткани человека, как и любого другого живого существа состоят из клеток. В этих клетках постоянно происходят какие-то процессы. Что-то обновляется, какие-то элементы отработали свой цыкл и разрушаются, на смену им образуются
                         другие элементы. Таким образом, каждая клетка в теле нуждается в своевременном выведении продуктов распада и в доставке новых макро и микропитательных веществ и кислорода. Если продукты распада клеточной жизнедеятельности не выводятся
-                        и вовремя не доставляются питательные вещества занчит нарушена транспортная функция (ее в нашем теле выполняет сердечно-сосудистая и лимфатическая системы).<br>
+                        и вовремя не доставляются питательные вещества занчит нарушена транспортная функция (ее в нашем теле выполняет сердечно-сосудистая и лимфатическая системы). Кстати, сердце - это мышца, которую тоже нужно тренировать.<br>
                         <br> Получается, что нарушение клеточного обмена ведёт к ухудшению работоспособности и старению организма. <br> Появляется вялость, усталость, головные боли, головокружения, слабость, лишние подкожно-жировые отложения, сутулость,
                         апатия, депрессия, недовольство собой. <br> Как же можно повлиять на ситуацию? Как оставаться молодым, подвижным и хорошо выглядеть не зависимо от возраста?</p>
                     <ul>
