--- a/index.html
+++ b/index.html
@@ -147,19 +147,32 @@
             </div>
         </div>
     </div>
-    <div id="footer">
+          <footer id="footer">
+            <div class="black-block">
+                <div id="p.m contacts" class="Контакты">
+                    <nav class="menu footer">
+                        <a href="about me.html"></i>О себе</a>
+                        <a href="contacts.html"></i>Контакты</a>
+                        <a href="index.html"></i>Главная</a>
+                        <a href="#p.m Akcii">Акции</a>
+                    </nav>
+                    
+                    
+ 
+                    <a href="tel:+380638587378">
+                        <img class="tel" src="icons/button-telephone-icon.png" alt="+380638587378">
+                    </a>
+                    <p class="number">+380638587378</p>
 
-        <div class="icons">
-            <a href="viber:+380935809669">
-                <mg class="viber" src="/icons/Viber.png" alt="+380935809669">
-            </a>
-            <a href="whatsapp:+79779886018">
-                <mg class="whatsapp" src="/icons/WhatsApp.png" alt="+79779886018">
-            </a>
-            <a href="tel:+380638587378">
-                <img class="tel" src="/icons/button-telephone-icon.png" alt="+380638587378">
-            </a>
-        </div>
-    </div>
+
+                    <div class="name2">Limo-Lux</div>
+                </div>
+
+
+
+            </div>
+
+        </footer>
+
 
 </body>
