--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
                     <p class="number">+380638587378</p>
 
 
-                    <div class="name2">Limo-Lux</div>
+                    
+                    <div class="name">ARKADIY_GYM</div>
+                    <h4>FITNES BLOG & STORE</h4>
                 </div>
 
 
