--- a/lose weight.html
+++ b/lose weight.html
@@ -80,7 +80,8 @@
                 <p>
                     <h2>Как похудеть?</h2>
 
-                    <p>Методы которые описаны в этой статье действуют и являтся важнейшими, необходимыми шагами для снижения лишнего веса.
+                    <p>Методы которые описаны в этой статье действуют и являтся важнейшими, необходимыми шагами для снижения лишнего веса. <br>
+                        Не обязательно применять сразу все описанные пункты. Выберите себе сперва один и введите его в свою жизнь так, чтоб это стало Вашей новой привычкой. 
                     </p>
                     <p>Похудение - это комплекс мер по изменению образа жизни. <br> Если Вы верите в существование "волшебного средства", приняв которое можно быстро похудеть - Вы заблуждаетесь и собираетесь пойти по ложному пути. <br>
                         <ul>                                                      
