--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
 
                     <p>Соответственно, для противодействия старению нужно разнообразно питаться и ежедневно активно двигаться. Движение является профилактикой и лекарством для большинства заболеваний. Благодаря движению можно мощно воздействовать на настроение
                         и жизненный настрой вцелом!</p>
+                
+                <h2>Сколько нужно тренироваться?</h2>
+                <p>Тренировки могут иметь разных характер, а именно - спорт (достижение высоких результатов, борьба за первенство), фитнес (улучшение внешности, здоровья, сохранение подаренной нам от природы функциональности, противодействие старению), лечебного характера - реабилитационные или ЛФК (восстановление после полученных в процессе жизнедеятельности или врожденных травм и заболеваний).
+                Для достижения каждой из этих задач выбираются свои методы.
+                    Все виды двигательной активности делятся на "<b>аэробные</b>" (цыклические движения в процессе выполнения которых появляется отдышка) и "<b>анаэробные</b>" (кратковременные, взрывные нагрузки). <br>
+                    Мышечные волокна, свою очередь тоже делятся на группы "красные мышечные волокна" - долгосокращаемые. Практически не увеличиваются в объеме. Работают привыполнении длительных, низкоинтенсивных нагрузок - марафонский бег, велосипед, лыжи и т. д.
+                    "розовые мышечные волокна" - промежуточные. Работают и при высокоинтенсивных - силовых нагрузках и при длительных энергоемких нагрузках. И "белые мышечные волокна" - силовые. Значительно увеличивающиеся в объемах.
+                    Тренировочный график должен выстраиваться с учетом времени восстановления организма. Тренировка сама по себе является стрессом и разрушительно воздействует на нервную систему и опорно двигательный аппарат. Затем начинается период восстановления. Тело стремится прийти в свое исходное состояние. Обычно период восстановления длится в среднем 24 часа и зависит от наличия условий для восстановления, размера поврежденных мышц и степени повреждения. На вторые сутки наченается период "гиперкомпенсации", подготавливающий поврежденные органы к такому типу нагрузок, на случай если они будут повторяться в будущем и длится 24-48часов. 
+                <ul>
+                        <li>
+                            1. </li>
+                        <li>
+                            2. </li>
+                    </ul></p>
 
                     <h2>Спорт - гигиена тела!</h2>
 
