--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                     <p>Все виды двигательной активности делятся на "<b>аэробные</b>" (цыклические движения в процессе выполнения которых появляется отдышка) и "<b>анаэробные</b>" (кратковременные, взрывные нагрузки).</p> 
                     <p>Мышечные волокна, свою очередь тоже делятся на группы "<b>красные мышечные волокна</b>" - долгосокращаемые. Практически не увеличиваются в объеме. Работают привыполнении длительных, низкоинтенсивных нагрузок - марафонский бег, велосипед, лыжи и т. д.
                     "<b>розовые мышечные волокна</b>" - промежуточные. Работают и при высокоинтенсивных - силовых нагрузках и при длительных энергоемких нагрузках. И "<b>белые мышечные волокна</b>" - силовые. Значительно увеличивающиеся в объемах.</p>
-                    <p>Тренировочный график должен выстраиваться с учетом времени восстановления организма.<br> 
-                        Аэробные тренировки могут выполняться ежедневно и чем чаще выполняются, тем заметнее результаты приносят.<br>
-                        Анаэробные тренировки требуют больше времени для восстановления и для атлетов не использующих вспомогательных восстанавливающих средств оптимальнее тренироваться через день.<br>
+                    <p>Тренировочный график должен выстраиваться с учетом времени восстановления организма.</p> <br>
+                       <p>Аэробные тренировки могут выполняться ежедневно и чем чаще выполняются, тем заметнее результаты приносят.</p><br>
+                       <p>Анаэробные тренировки требуют больше времени для восстановления и для атлетов не использующих вспомогательных восстанавливающих средств оптимальнее тренироваться через день.</p><br>
                         Тренировка сама по себе является стрессом и разрушительно воздействует на нервную систему и опорно двигательный аппарат. После тренировки начинается период восстановления, тело стремится прийти в свое исходное состояние. Обычно период восстановления длится в среднем 24 часа и зависит от наличия условий для восстановления, размера поврежденных мышц и степени повреждения. На вторые сутки наченается период "гиперкомпенсации", подготавливающий поврежденные органы к такому типу нагрузок, на случай если они будут повторяться в будущем и длится 24-48часов. 
                 <ul>
                        
