--- a/index.html
+++ b/index.html
@@ -115,14 +115,10 @@
 
 
 
-                    
+                    <h1>Зачем нужен тренер и как выбрать тренера ?</h1>
                         <img class="photo-box" src="img/box.jpg" alt="персональный тренер Киев 0638587378">
                         
-                            <h1>Зачем нужен тренер и как выбрать тренера ?</h1>
-
-                            <p>
-
-                                Выбирая тренера - выбираешь себе путь в спорте. Один тренер приведет к желаемым результатам, а другой может испортить состояние здоровья. Как отличить специалиста от диллетанта?
+                                                     <p>Выбирая тренера - выбираешь себе путь в спорте. Один тренер приведет к желаемым результатам, а другой может испортить состояние здоровья. Как отличить специалиста от диллетанта?
                                 <ol>
                                     <li>
                                         Наблюдайте, как тренер проводит тренировки с другими людьми. На что обратить внимание:
