--- a/TRX.html
+++ b/TRX.html
@@ -88,6 +88,10 @@
                     развивается гибкость, ловкость, выносливость и вестибулярный аппарат. — TRX тренировки безопасны. Во время занятий вы работаете только с весом собственного тела. — Во время TRX тренировки вы тратите большое количество калорий, что
                     способствует снижению лишнего веса. — Занятия на петлях TRX благотворно влияют на позвоночник. Поэтому тренировки TRX почти единственный вид спорта, который разрешен людям с травмами позвоночника.
 
+                <div class="video-container">
+                        <embed width="1349" height="480" src="https://www.youtube.com/embed/_mTPz-aQo54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                    </div>
+            
                     <h2>Занятия на петлях TRX в Киеве</h2>
                     Успех TRX тренировок в том, что у этой системы почти нет противопоказаний. TRX тренировки в Киеве могут посещать взрослые и дети. Во время занятий почти нет никакой нагрузки на позвоночник! Для занятий в фитнес- клубах используют TRX петли. TRX петли
                     это два эластичных ремня, концы которых снабжены удобными рукоятками. Несмотря на простоту TRX тренажеров, петли TRX могут выдерживать до 180 кг.
