--- a/TRX.html
+++ b/TRX.html
@@ -89,7 +89,7 @@
                     способствует снижению лишнего веса. — Занятия на петлях TRX благотворно влияют на позвоночник. Поэтому тренировки TRX почти единственный вид спорта, который разрешен людям с травмами позвоночника.
 
                 <div class="video-container">
-                        <embed width="1349" height="480" src="https://www.youtube.com/embed/_mTPz-aQo54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                        <embed width="1349" height="480" src="https://youtu.be/BPf2MpmW2ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
                     </div>
             
                     <h2>Занятия на петлях TRX в Киеве</h2>
