--- a/lose weight.html
+++ b/lose weight.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Как похудеть</title>
+    <title>Тренировки с персональным фитнес тренером</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
@@ -41,25 +41,18 @@
                             <li><a href="group">Групповые тренировки</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="about me.html">О себе</a>
-                    </li>
+
                     <li>
                         <a href="lose weight.html">Похудеть</a>
+                    </li>
+                    <li>
+                        <a href="about me.html">О себе</a>
                     </li>
                     <li>
                         <a href="contacts.html">Контакты</a>
                     </li>
                 </ul>
             </nav>
-
-
-
-
-
-
-
-
         </div>
         <div class="gray-block">
             <div class="name">ARKADIY_GYM</div>
@@ -70,90 +63,51 @@
 
 
     <div id="content">
-        <div class="coach d-flex justify-content-around">
+        <div class="box-container">
+            <div class="coach d-flex justify-content-around">
+                <img class="photo" src="img/4m.png" alt="персональный тренер Киев 0638587378">
 
+                <div class="kdb">
 
-            <!-- TODO after before pseudo elements -->
+                    <div class="myself">
+                        <h1>Персональный тренер по бодибилдингу и фитнесу</h1>
 
-            <div class="kdb">
-
-                <p>
-                    <h2>Как похудеть?</h2>
-
-                    <p>Методы которые описаны в этой статье действуют и являтся важнейшими, необходимыми шагами для снижения лишнего веса. <br> Не обязательно применять сразу все описанные пункты. Выберите себе сперва один и введите его в свою жизнь так,
-                        чтоб это стало Вашей новой привычкой.
-                    </p>
-                    <p>Похудение - это комплекс мер по изменению образа жизни. <br> Если Вы верите в существование "волшебного средства", приняв которое можно быстро похудеть - Вы заблуждаетесь и собираетесь пойти по ложному пути. <br>
-                        <ul>
-                            <li>1.
-                                <h3>Режим питания</h3>
-                                В правильном питании стоит учитывать "Режим питания" и "Рацион питания".
-                                <ol> -На мой взгляд режим питания важнее.</ol>
-                                <ol> -Если в течении дня Вы недоедаете - то съедите суточную норму вечером или ночью!</ol>
-                                <ol> -Необходимо кушать 5 раз в день с промежутками 3 часа между приемами пищи.</ol>
-                                <ol> -Тело начинает запасать калории в случае нерегулярного питания!</ol>
-                            </li>
-
-                            <li>2.
-                                <h3>Рацион питания</h3>
-                                95% подкожного жира появляется от углеводов, а не от жиров. Углеводы бывают быстро усваиваемые и медленно усваиваемые. Необходимо исключить быстроусваиваемые:
-                                <ol>-сахар</ol>
-                                <ol>-мед</ol>
-                                <ol>-сладости</ol>
-                                <ol>-хлеб</ol>
-                                <ol>-быстроусваиваемые сорта риса</ol>
-                                <ol>-виноград, изюм</ol>
-                                <ol>-цытрусовые (кроме грейпфрута - он наоборот сопутствует жиросжиганию)</ol>
-                                <ol>-буряк, морковь, картофель</ol>
-                                <ol>-алкоголь</ol>
-                                <ol>-сливочное, подсолнечное масла</ol>
-                                <ol>-майонез, соусы, сметана</ol>
-                                Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи капните на сковороду несколько капель масла на которм обычно готовите и разотрите, либо используйте пуливер чтоб снизить количество
-                                масла.
-                            </li>
+                        <div class="myself">
+                            <h3>О себе:</h3>
+                            <p>Меня зовут Аркадий. Я занимаюсь спортом уже около 28-лет. С начальных классов школы я занимался плаваньем. Этот вид спорта сильно повлиял на мое физическое развитие. Сразу после Чемпионата Украины по "подводному марафону" 03.06.2000,
+                                на котором я стал призером, получаю бытовую травму позвоночника. Диагноз "компрессионный перелом 12го грудного и 1го поясничного позвонков". Всвязи с травмой карьера плавца оборвалась и начался путь реабилитации. Развитая
+                                мускулатура кора позволила избежать использование поясничного корсета и для ее поддержания один из врачей порекомендовал силовые тренировки с отягощением. Я изучил все противопоказания и начал заниматься с целью реабилитации.
+                                Силовые тренировки помогли очень быстро восстановиться и впоследствии стали моим новым увлечением. Я увлекся бодибилдингом, построил себе такое телосложение, какое хотел, стал призером Киева 2014 года и научился удерживать
+                                форму круглогодично.
+                            </p>
                             <br>
-                            <h5>Чо же тогда кушать?</h5>
-                            <li>
-                                <ol>рыба, морепродукты</ol>
-                                <ol>мясо не жирное, птица (жир удаляйте)</ol>
-                                <ol>яйца</ol>
-                                <ol>молокопродукты не жирные</ol>
-                                <ol>овощи - капуста, огурцы, зелень, сельдерей (кроме перечисленных в не желательных)</ol>
-                                <ol>грейпфрут</ol>
-                                <ol>в качестве жиров употребляйте рыбий жир и льняное масло</ol>
-                                <ol>пейте много воды, газированной или нет - не важно</ol>
-                            </li>
 
-                            <li>3.
-                                <h3>Калорийность</h3>
-                                <ol>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</ol>
-                                <ol>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел, поднимаясь выше Вы не похудеете.</ol>
-                                <ol>ромежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.</ol>
-                                Калорийность каждого продукта обычно написана на упаковке. Так же, калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность. Если Вы будете выполнятять рекомендацию описанную в 3 пункте -
-                                то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат Вы увидите раньше и он Вам понравится больше.<br>
+                            <div class="zal">
+                                <img class="photo-zal1" src="img/diplom1.jpg" alt="персональный тренер Киев 0638587378">
+                                <img class="photo-zal2" src="img/diplom2.jpg" alt="персональный тренер Киев 0638587378">
+                            </div>
+
+                            <p> Начал работать личным тренером в 2005м году, сразу после получения диплома НТУУ КПИ «специалист по физической реабилитации». В моей тренерской карьере были перерывы связанные с переездами, травмами и даже профессиональным выгоранием,
+                                но я остаюсь и останусь в этой профессии потому что люблю процесс тренировок, общение с людьми разных профессий и жизненных взглядов, мне нравится что я выгляжу моложе своих лет, чувствую себя здоровым и подвижным, знаю
+                                как сберечь молодость и здоровье на более длительный период жизни. За время работы фитнес тренером я убедился, что спорт благотворно воздействует на эмоциональное состояние, состояние кожи, нормализует давление и уровень
+                                сахара в крови, на пищеварение, на осанку, на походку, на легкость в движениях, уверенность в собственных силах и привлекательность для окружающих. s
+                            </p>
+                        </div>
+
+                        <div class="zal">
+                            <img class="photo-I_1" src="img/00334003_2.jpg" alt="персональный тренер Киев 0638587378">
+                            <img class="photo-I_2" src="img/crop_78782229_YMyp.jpg" alt="персональный тренер Киев 0638587378">
+                            <img class="photo-I_3" src="img/unnamed 700х700.jpg" alt="персональный тренер Киев 0638587378">
+                        </div>
 
 
-                                <li>4.
-                                    <h3>Двигайтесь!</h3>
-                                    Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощением.</li>
-
-                        </ul>
-                    </p>
-
-                    <div class="video-container">
-                        <embed width="1349" height="480" src="https://www.youtube.com/embed/tSOY8clJIdo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
                     </div>
 
-                    <p>Занимаясь спортом Вы забудете о проблеме лишнего веса. Спорт - это занятие для целеустремлённых и волевых людей, которые при трудностях идут на все что бы решить их, а не бросаются в рюмку или на кусок торта, в целях получить свою
-                        порцию удовольствия. Поймите, если Вам не нравится Ваша жизнь, если Вам не нравится Ваша внешность – это сигнал к действию! Примите вызов и сделайте первый шаг – придите в зал. Научитесь терпеть, просто ждать и верить в результат!
-                        Тело будет сопротивляться, оно привыкло валяться на диване или сидеть в ресторане, но Ваша задача упорно двигаться вперёд! Когда пройдёт первый месяц, Вы увидите свои первые изменения, тело начнёт поддаваться Вашим усилиям и терпению,
-                        это заметят друзья и родные. Когда пройдёт год, Вы просто не будете понимать, как раньше жили без этого, Вы влюбитесь в себя, в свой новый образ и ощущения лёгкости в жизни.</p>
 
-
-                    <p>Не знаете с чего начать?<br> -Воспользуйтесь помощью. <br> Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата.</p>
-
-                    <p>Занимайтесь спортом!<br> Приходите тренироваться.
+                    <p> Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете!
                     </p>
+
+                </div>
             </div>
         </div>
     </div>
