--- a/men.html
+++ b/men.html
@@ -79,49 +79,57 @@
 
             <div class="kdb">
 
+                <h2>Спорт в жизни мужчины</h2>
+
+                <p> Практически во все времена мужчины занимались физической активностью, это было нужно для выживания. И только последнее время Физическая активность мужчин снизилась, поскольку теперь появились новые возможности для обеспечения выживания
+                    и комфортной жизни.<br>
+                </p>
+                <img class="photo-home-train" src="img/IMG_2683.JPG" alt="персональный тренер Киев 0638587378"> Современная жизнь выглядит более спокойной и стабильной, но в ней есть свои особенности. </p>
+                <p>Настоящей проблемой для представителей многих профессий стал "сидячий" образ жизни. Представителям it профессий например, просто необходима дополнительная физическая активность. В результате "жизни сидя" снижается мышечный тонус, появляется
+                    сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д.
+                </p>
+
+                <p>Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. <br> Кстати, менять качества своего характера - это реально.
+                    <ul>
+                        <li>А Вы уже знаете себя?</li>
+                        <li>Кто Вы? </li>
+                        <li>Что за сущность живет внутри Вас? </li>
+                        <li>Как она будет вести себя в стрессовой ситуации? </li>
+
+                    </ul>
+                </p>
+
+                <div class="video-container">
+                    <embed width="1349" height="480" src="https://www.youtube.com/embed/_mTPz-aQo54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                </div>
+                <br>
+                <p> А хотите в пожилом возрасте быть спортивным, тренированным, сильным мужчиной, которому не будут уступать место в транспорте, поскольку он будет до старости нести в себе силу?</p>
+
+                <p>Не знаете с чего начать?<br> -Воспользуйтесь помощью. <br> Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата.</p>
                 <p>
-                    <h2>Спорт в жизни мужчины</h2>
+                    <h3>Чем я могу быть Вам полезен?</h3>
 
-                    <p> Практически во все времена мужчины занимались физической активностью, это было нужно для выживания. И только последнее время Физическая активность мужчин снизилась, поскольку теперь появились новые возможности для обеспечения выживания
-                        и комфортной жизни.<br>
-                        <img class="photo-home-train" src="img/IMG_2683.JPG" alt="персональный тренер Киев 0638587378"> Современная жизнь выглядит более спокойной и стабильной, но в ней есть свои особенности. </p>
-                    <p>Настоящей проблемой для представителей многих профессий стал "сидячий" образ жизни. Представителям it профессий например, просто необходима дополнительная физическая активность. В результате "жизни сидя" снижается мышечный тонус, появляется
-                        сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д.</p>
+                    <ul>
+                        <li>-Набор мышечной массы </li>
+                        <li>-Увеличение силы</li>
+                        <li>-Увеличение выносливости</li>
+                        <li>-Сжигание жира, сушка</li>
+                        <li>-Подготовка к соревнованиям по бодибилдингу</li>
+                        <li>-Реабилитационный тренинг при травмах суставов или позвоночника</li>
+                    </ul>
 
-                    <p>Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. <br> Кстати, менять качества своего характера - это реально.
-                        <ul>
-                            <li>А Вы уже знаете себя?</li>
-                            <li>Кто Вы? </li>
-                            <li>Что за сущность живет внутри Вас? </li>
-                            <li>Как она будет вести себя в стрессовой ситуации? </li>
+                    Условия тренировок и посещения зала см. на стр
+                </p>
+                <a href="contacts.html">Контакты</a><br>
 
-                        </ul>
-
-                        <div class="video-container">
-                            <embed width="1349" height="480" src="https://www.youtube.com/embed/_mTPz-aQo54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
-                        </div>
-                        <br> А хотите в пожилом возрасте быть спортивным, тренированным, сильным мужчиной, которому не будут уступать место в транспорте, поскольку он будет до старости нести в себе силу?</p>
-
-                    <p>Не знаете с чего начать?<br> -Воспользуйтесь помощью. <br> Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата.</p>
-                    <p>
-                        <h3>Чем я могу быть Вам полезен?</h3>
-
-                        <ul>
-                            <li>-Набор мышечной массы </li>
-                            <li>-Увеличение силы</li>
-                            <li>-Увеличение выносливости</li>
-                            <li>-Сжигание жира, сушка</li>
-                            <li>-Подготовка к соревнованиям по бодибилдингу</li>
-                            <li>-Реабилитационный тренинг при травмах суставов или позвоночника</li>
-                        </ul>
-                        Условия тренировок и посещения зала см. на стр
-                        <a href="contacts.htКонтакты</a>
-                    </p>
+                <p> Возможно тренироваться и получать результат в домашних условиях.
+                </p>
+                <a href="pt.home.html">Тренер на дом</a>
 
 
 
-                    <p>Занимайтесь спортом!<br> Приходите тренироваться.
-                    </p>
+                <p>Занимайтесь спортом!<br> Приходите тренироваться.
+                </p>
             </div>
         </div>
     </div>
