--- a/women.html
+++ b/women.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
+    <meta name=”robots” content=”noindex, follow”>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тренировки на TRX</title>
+    <title>Как тренироваться девушке?</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
@@ -62,6 +63,7 @@
 
 
 
+
         </div>
         <div class="gray-block">
             <div class="name">ARKADIY_GYM</div>
@@ -78,33 +80,36 @@
             <div class="kdb">
 
                 <p>
-                    <h1>TRX - тренировки</h1>
+                    <h1>Женский тренинг</h1>
 
-                    Что такое TRX тренировки? TRX тренировки были придуманы в 1997 году командиром подразделения «Морские котики» Рэнди Хетриком. Его подразделение находилось в тот момент в Юго-Восточной Азии. Командиру нужно было подготовить людей к захвату судна, при чем
-                    тренировки должны были происходить в условиях строгой секретности. Рэнди попались парашютные стропы. Хэтрик смастерил из них «Y»-образную веревочную систему, закрепив один конец в проеме двери. Когда он уволился с военной службы, то
-                    запатентовал свое изобретение и стал продавать TRX тренажеры. Министерство обороны США тоже оценило систему TRX. Они закупили тренажеры и сделали TRX тренировки частью обязательной подготовки военных.
+                    <h2>Зачем девушкам силовые тренировки?</h2>
+                    Девушки в результате тренировок хотят стать стройными и подтянутыми. Основной акцент в тренинге обычно делается на мускулатуру ног, ягодиц, уменьшение талии и создание красивого, женственного телосложения. К тому же и женский организм сильно отличается
+                    от мужского. Все эти факторы необходимо учитывать в построении тренировочной программы чтоб тренировки были эффективными, а не вредили самочувствию.
                 </p>
 
-                <img class="photo-home-train" src="img/trx__.jpg" alt="персональный тренер Киев 0638587378">
-                <p> Польза TRX тренировок. — TRX тренировки позволяют развивать и поддерживать в хорошей форме все группы мышц. — Во время занятия на TRX петлях развивается гибкость, ловкость, выносливость и вестибулярный аппарат. — TRX тренировки безопасны.
-                    Во время занятий вы работаете только с весом собственного тела. — Во время TRX тренировки вы тратите большое количество калорий, что способствует снижению лишнего веса. — Занятия на петлях TRX благотворно влияют на позвоночник. Поэтому
-                    тренировки TRX почти единственный вид спорта, который разрешен людям с травмами позвоночника.
-                </p>
-                <div class="video-container">
-                    <embed width="1349" height="480" src="https://www.youtube.com/watch?v=BPf2MpmW2ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
-                </div>
 
-
-                <h2>Занятия на петлях TRX в Киеве</h2>
-                <p>
-                    Успех TRX тренировок в том, что у этой системы почти нет противопоказаний. TRX тренировки в Киеве могут посещать взрослые и дети. Во время занятий почти нет никакой нагрузки на позвоночник! Для занятий в фитнес- клубах используют TRX петли. TRX петли
-                    это два эластичных ремня, концы которых снабжены удобными рукоятками. Несмотря на простоту TRX тренажеров, петли TRX могут выдерживать до 180 кг.
+                <img class="photo-home-train" src="img/w.jpg" alt="персональный тренер Киев 0638587378">
+                <p> Чаще всего, женщины более выносливые, и времени на восстановление им нужно меньше, но настроение и работоспособность сильно меняется в течении месяца. Составляя тренировочный план, нужно отталкиваться и от этого аспекта тоже. <br> Учтите,
+                    фитнес и здоровый образ жизни – это не только зал, это еще и все остальное время до и после тренировки.<br> Многие девушки предпочитают работать, в основном, с тренажерами, пренебрегая свободными весами. А зря, ведь силовая тренировка
+                    с отягощениями сделает для Вашего тела намного больше.<br> Я считаю, что успеха достигнет лишь тот кто сделает свой путь достаточно увлекательным, чтобы итти по нему бесконечно долго. Тренировки дожны быть в радость!<br>
+                    <br> При регулярном, правильном тренинге уже через пару месяцев Ваше тело будет очень нравиться Вам самим, не говоря уже о мужчинах.
                 </p>
                 <p>
-                    <h3>TRX петли</h3> идеальный тренажер для занятий дома. Вам потребуется лишь закрепить его. Но не торопитесь покупать TRX петли. TRX занятия дадут замечательный результат, если правильно выполнять упражнения. Какая должна быть поза, как
-                    держать руки, как поставить ноги – все это вам должен показать инструктор. Он же должен следить за тем как вы выполняете упражнения, подсказать, когда и как можно увеличить нагрузку, провести разминку перед занятиями. Занятия на петлях
-                    TRX проходят для новичков, для людей среднего уровня физической подготовки и для подготовленных спортсменов. Занятия должны быть безопасными и доставлять пользу и удовольствие. Поэтому мы всегда настаиваем, чтобы перед выбором того
-                    или иного вида тренировок, Тренировки на петлях TRX это способ не только похудеть и поддерживать тело в хорошей физической форме, но и развить ловкость и гибкость.
+                    <h3>Чем я могу быть Вам полезен?</h3>
+
+                    <ul>
+                        <li>-Комплексное построение фигуры. Сделаем фигуру такой как Вы хотие! </li>
+                        <li>-Учет особенностей женского организма</li>
+                        <li>-Корректировка плана питания</li>
+                        <li>-Снижение веса, сжигание подкожного жира, сушка</li>
+                        <li>-Акцент на тренировку ног и ягодиц</li>
+                        <li>-Увеличение выносливости</li>
+                        <li>-Реабилитационный тренинг при травмах суставов или позвоночника</li>
+                    </ul>
+                </p>
+                <p> Условия тренировок и посещения зала см. на стр </p>
+                <a href="contacts.html">Контакты</a><br>
+                <p> Возможно тренироваться и получать результат в домашних условиях. <a href="pt.home.html">Тренер на дом</a>
                 </p>
             </div>
         </div>
