--- a/TRX.html
+++ b/TRX.html
@@ -37,16 +37,16 @@
                             <li><a href="men.html">Мужской тренинг</a></li>
                             <li><a href="women.html">Тренировки для девушек</a></li>
                             <li><a href="pt.home.html">Тренер на дом</a></li>
-                            <li><a href="lose weight.html">Похудеть</a></li>
+                            <li><a href="lose_weight.html">Похудеть</a></li>
                             <li><a href="group">Групповые тренировки</a></li>
                         </ul>
                     </li>
 
                     <li>
-                        <a href="lose weight.html">Похудеть</a>
+                        <a href="lose_weight.html">Похудеть</a>
                     </li>
                     <li>
-                        <a href="about me.html">О себе</a>
+                        <a href="about_me.html">О себе</a>
                     </li>
                     <li>
                         <a href="contacts.html">Контакты</a>
@@ -114,7 +114,7 @@
 
             <nav class="menu footer">
                 <a href="index.html">Главная</a>
-                <a href="about me.html">О себе</a>
+                <a href="about_me.html">О себе</a>
                 <a href="contacts.html">Контакты</a>
             </nav>
             <p class="number">+380638587378</p>
