--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                             <li><a href="men.html">Мужской тренинг</a></li>
                             <li><a href="women.html">Тренировки для девушек</a></li>
                             <li><a href="pt.home.html">Тренер на дом</a></li>
-                            <li><a href="lose weight.html">Похудеть</a></li>
+                            <li><a href="lose_weight.html">Похудеть</a></li>
                             <li><a href="group">Групповые тренировки</a></li>
                         </ul>
                     </li>
 
                     <li>
-                        <a href="lose weight.html">Похудеть</a>
+                        <a href="lose_weight.html">Похудеть</a>
                     </li>
                     <li>
-                        <a href="about me.html">О себе</a>
+                        <a href="about_me.html">О себе</a>
                     </li>
                     <li>
                         <a href="contacts.html">Контакты</a>
@@ -142,7 +142,7 @@
         <div class="black-block">
 
             <nav class="menu footer">
-                <a href="about me.html">О себе</a>
+                <a href="about_me.html">О себе</a>
                 <a href="contacts.html">Контакты</a>
                 <a href="index.html">Главная</a>
             </nav>
