--- a/TRX.html
+++ b/TRX.html
@@ -112,7 +112,7 @@
     <footer id="footer">
         <div class="black-block">
 
-            <nav class="menu footer">
+            <nav class="menu_footer">
                 <a href="index.html">Главная</a>
                 <a href="about_me.html">О себе</a>
                 <a href="contacts.html">Контакты</a>
