--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <footer id="footer">
         <div class="black-block">
 
-            <nav class="menu footer">
+            <nav class="menu_footer">
                 <a href="about_me.html">О себе</a>
                 <a href="contacts.html">Контакты</a>
                 <a href="index.html">Главная</a>
