--- a/pt.home.html
+++ b/pt.home.html
@@ -118,7 +118,7 @@
         <footer id="footer">
             <div class="black-block">
                 
-                    <nav class="menu footer">
+                    <nav class="menu_footer">
                         <a href="index.html"></i>Главная</a>
                         <a href="about_me.html"></i>О себе</a>
                         <a href="contacts.html"></i>Контакты</a>
